fixed the z-index of the hamburger overlay and the mob-nav

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,6 +106,7 @@ body {
     position: fixed;
     width: 100%;
     box-shadow: 0 0 6px rgba(0, 0, 0, .26);
+    z-index: 10;
 }
 .burger-container {
     position: relative;
@@ -140,7 +141,7 @@ body {
     z-index: 1000;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.95);
+    background-color: rgba(0, 0, 0, 0.85);
     overflow-x: hidden;
     transition: 0.5s;
 }
@@ -274,14 +275,14 @@ body {
     padding: 20px;
     font-size: 1.3em;
     font-style: italic;
-    color: #000000;
+    /* color: #000000; */
 }
 
 .testim-footer {
     display: flex;
     align-items: center;
     gap: 20px;
-    color: #000000;
+    /* color: #000000; */
 }
 
 .testim-img {
